Working on selection system

--- a/example.htm
+++ b/example.htm
@@ -6,6 +6,8 @@
 
     <title>Paper.js Toolbox Example</title>
 
+    <link rel="stylesheet" type="text/css" href="styles/basic-toolbox.css">
+
     <script src="lib/paper-full.min.js"></script>
     <script src="paper-toolbox.js"></script>
     <script src="tools/Cursor.js"></script>
